--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/user-event": "github:testing-library/user-event",
+    "ag-grid-react": "^26.0.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
+    "griddle-react": "^0.8.1",
+    "mdb-react-ui-kit": "^1.3.0",
+    "mdbreact": "^5.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-table-scrollbar": "^0.1.11",
+    "react-to-pdf": "0.0.14",
+    "rechart": "0.0.1",
+    "recharts": "^2.1.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
